--- a/rules.html
+++ b/rules.html
@@ -320,11 +320,11 @@
                 </div>
                 <div class="info-card">
                     <h3>🛡️ Храм</h3>
-                    <p>Безопасное место. Здесь вашу фишку никто не может сбить.</p>
+                    <p>Здесь ваша фишка защищена от сбивания. На этом поле может находиться только одна фишка одновременно. Фишка может покинуть Храм в любой свой ход. Мимо фишек, зашедших в Храм или Тюрьму, можно пройти.</p>
                 </div>
                 <div class="info-card">
                     <h3>🕳️ Тюрьма (Яма)</h3>
-                    <p>Попав сюда, вы «застряли». Чтобы выйти, нужно выбросить 6. Шестёрка «сгорает», а вторая кость укажет, на сколько шагов вы двигаетесь.</p>
+                    <p>Попав сюда, вы «застряли». Чтобы выйти, нужно выбросить 6. Шестёрка - плата за выход, а вторая кость укажет, на сколько шагов вы двигаетесь. На этом поле может находиться только одна фишка одновременно.</p>
                 </div>
             </div>
 
@@ -336,12 +336,11 @@
 
             <h2>7. Особые правила бросков</h2>
             <ul>
-                <li>При «1:1» или «6:6» игрок бросает кубики заново, но не более трёх раз подряд</li>
-                <li>Если кубик упал за поле или на ребро — бросок переигрывается</li>
+                <li>При «1:1» или «6:6» игрок бросает кубики заново, но не более трёх раз подряд</li>                
             </ul>
 
             <h2>8. Завершение игры</h2>
-            <p>Побеждает тот, кто первым заведёт все свои фишки в Дом. Финиш сопровождается анимацией победы и экраном результатов.</p>
+            <p>Побеждает тот, кто первым заведёт все свои фишки в Дом.</p>
 
             <h2>9. Советы новичкам</h2>
             <ul>
