--- a/situations.html
+++ b/situations.html
@@ -6,6 +6,8 @@
     <meta name="yandex-verification" content="436ec8060c4d8c21" />
     <title>Игровые ситуации Чаупар — разбор сложных моментов</title>
     <meta name="description" content="Разбор сложных игровых ситуаций в Чаупар. Примеры ходов и правильные решения для улучшения вашей игры." />
+	<link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
+	<link type="Image/x-icon" href="favicon.ico" rel="icon">
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function(m,e,t,r,i,k,a){
