--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,8 @@
     <meta name="yandex-verification" content="436ec8060c4d8c21" />
     <title>Контакты — Чаупар онлайн игра</title>
     <meta name="description" content="Свяжитесь с нами по поводу игры Чаупар. Вопросы, предложения и поддержка." />
+	<link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
+	<link type="Image/x-icon" href="favicon.ico" rel="icon">
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function(m,e,t,r,i,k,a){
