--- a/rules.html
+++ b/rules.html
@@ -6,6 +6,8 @@
     <meta name="yandex-verification" content="436ec8060c4d8c21" />
     <title>Правила игры Чаупар — индийская настольная игра онлайн</title>
     <meta name="description" content="Полные правила игры Чаупар. Узнайте, как играть в древнюю индийскую настольную игру онлайн." />
+	<link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
+	<link type="Image/x-icon" href="favicon.ico" rel="icon">
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function(m,e,t,r,i,k,a){
