Откат до состояния коммита 3aea789

--- a/news.html
+++ b/news.html
@@ -286,12 +286,11 @@
         <nav class="navigation">
             <div class="nav-links">
                 <a href="index.html">🎮 Играть</a>
-                <a href="multiplayer.html">🌐 Мультиплеер</a>
-                <a href="vs-computer.html">🤖 Игра с компьютером</a>
                 <a href="rules.html">📋 Правила</a>
                 <a href="situations.html">🎯 Игровые ситуации</a>
                 <a href="news.html" class="current">📰 Новости</a>
                 <a href="contacts.html">📧 Контакты</a>
+                <button id="save-game-btn" class="nav-button">💾 Сохранить игру</button>
             </div>
         </nav>
 
